Feat/refac: adjusted validations logics on any context flows (C,F,U)